
changes in version 0.03-23 (2015-10-11)
unreleased:
  - this release is under development
changed:
  - relocated the unit tests to tests/testthat
fixed:
  - XMLScanDeep() was said to examine node names, children and values as well
    as attributes, but in fact it was hard-wired on attributes only. removed
    children from the list and added support for names and values

changes in version 0.03-22 (2014-12-02)
fixed:
  - added curly brackets to the function bodies of all setGeneric() calls to
    satisfy roxygen2
changed:
  - allowing empty attributes (attr=""), these were skipped, but only if
    there was more than one attribute

changes in version 0.03-21 (2013-12-21)
added:
  - new attribute "as.list" added to XMLScan(), if TRUE forces the return
    value to be a list of length 1 (default is still to directly return the
    single node).
  - new method XMLScanDeep() recursively scans for attributes and returns all
    which were found
changed:
  - added a proper GPL notice at the beginning of each R file
  - the vignette was moved from inst/doc to inst/vignettes
  - synced names of Author: and Maintainer: in DESCRIPTION with Autors@R:

changes in version 0.03-20 (2013-03-30)
changed:
  - internally replaced paste(..., sep="") calls with paste0(...). for R
    versions older than 2.15 (when paste0() was introduced), a wrapper function
    should kick in, so we don't need to change the dependencies.

changes in version 0.03-19 (2013-02-24)
added:
  - new methods XMLScan() and XMLScan()<- to search an XML tree recursively
    for appearances of certain node names

changes in version 0.03-18 (2013-02-11)
changed:
  - renamed getter methods from getXML*() into the more generic XML*()
added:
  - added setter methods XML*()<- to all getter methods
  - added tests for getter/setter methods

changes in version 0.03-17 (2013-02-04)
added:
  - added proper is.XiMpLe.node() and is.XiMpLe.doc() functions