@@ -9,6 +9,8 @@ fixed:
   - XMLScanDeep() was said to examine node names, children and values as well
     as attributes, but in fact it was hard-wired on attributes only. removed
     children from the list and added support for names and values
+  - corrected internal function setMinIndent() for better indentation for comments
+  - internal function indent() can now handle negative levels
 
 changes in version 0.03-22 (2014-12-02)
 fixed:
